<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout0"
        android:orientation="vertical"
        android:contentDescription="@string/main_layout_desc">

    <ImageView
        android:id="@+id/to_type_1"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitStart"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/type1_ic"
        android:contentDescription="@string/to_type_1"/>

    <ImageView
        android:id="@+id/to_type_2"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_margin="10dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45"
        app:srcCompat="@drawable/type2_ic"
        android:contentDescription="@string/to_type_2"/>

    <ImageView
        android:id="@+id/to_type_3"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_margin="10dp"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_type_1"
        app:layout_constraintWidth_percent="0.45"
        app:srcCompat="@drawable/type3_ic"
        android:contentDescription="@string/to_type_3"/>

    <ImageView
        android:id="@+id/to_type_4"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_type_2"
        app:layout_constraintWidth_percent="0.45"
        app:srcCompat="@drawable/type4_ic"
        android:contentDescription="@string/to_type_4"/>

    <ImageView
        android:id="@+id/to_type_5"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_margin="10dp"
        android:layout_marginTop="33dp"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_type_3"
        app:layout_constraintWidth_percent="0.45"
        app:srcCompat="@drawable/type5_ic"
        android:contentDescription="@string/to_type_5"/>

    <ImageView
        android:id="@+id/to_type_6"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_type_4"
        app:layout_constraintWidth_percent="0.45"
        app:srcCompat="@drawable/type6_ic"
        android:contentDescription="@string/to_type_6"/>

<!--    <ImageView-->
<!--        android:id="@+id/to_type_7"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="194dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_marginTop="11dp"-->
<!--        android:scaleType="fitStart"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/to_type_5"-->
<!--        app:layout_constraintWidth_percent="0.45"-->
<!--        app:srcCompat="@drawable/type6_ic" />-->

<!--    <ImageView-->
<!--        android:id="@+id/to_type_8"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="194dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_marginTop="19dp"-->
<!--        android:scaleType="fitStart"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/to_type_6"-->
<!--        app:layout_constraintWidth_percent="0.45"-->
<!--        app:srcCompat="@drawable/type6_ic" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>